fix merge conflicts